<resources>
    <string name="app_name">HomAdit</string>
    <string name="internet_setting">تنظیمات wifi</string>
    <string name="data_setting">تنظیمات دیتا</string>
    <string name="warning">اخطار</string>
    <string name="text_input_mobile">لطفا شماره موبایل خود را وارد کنید</string>
    <string name="login_button_text">ارسال</string>
    <string name="connectionFaield">خطا در برقراری ارتباط</string>
    <string name="serverFaield">خطا در اطلاعات دریافتی از سرور</string>
    <string name="verification_hint">کد تایید</string>
    <string name="verification_header">کد تایید از طریق پیامک برای شما ارسال گردید.</string>
    <string name="veriification_resend_code">ارسال مجدد</string>
    <string name="text_double_click_exit">برای خروج دوباره کلیک کنید</string>
    <string name="home_tab">صفحه اصلی</string>
    <string name="register_tab">خریدهای جدید</string>
    <string name="myaccount_tab">تراکنش ها</string>
    <string name="store_tab">بازارچه</string>
    <string name="text_news">اخبار</string>
    <string name="text_video">ویدئوها</string>
    <string name="my_shop">تاریخچه خریدهای من</string>
    <string name="text_leftday">مانده تا قرعه کشی(روز)</string>
    <string name="text_your_point">امتیاز</string>
    <string name="text_balance">موجودی</string>
    <string name="incomplete_purchase">خرید ناقص</string>
    <string name="total_purchase">تعداد کل خرید</string>
    <string name="registered_products">کالاهای ثبت شده</string>
    <string name="retuen">بازگشت</string>
    <string name="attention">اخطار!</string>
    <string name="sure_text">بله،اطمینان دارم</string>
    <string name="cancel_text">انصراف</string>
    <string name="exit_profile_text_dialog">آیا اطمینان دارید که میخواهید از حساب کاربری خود خارج شوید؟</string>
    <string name="terms_conditions"><u>قوانین و مقررات</u></string>
    <string name="enter">ورود</string>
    <string name="accept_terms_conditions"> را مطالعه کرده و قبول دارم</string>
    <string name="shop">فروشگاه</string>
    <string name="shop2">فروشگاه:</string>
    <string name="tottal_amount">جمع کل مبلغ پرداختی(ریال)</string>
    <string name="discount">مبلغ تخفیف</string>
    <string name="paid_amount">مبلغ پرداخت شده واحد</string>
    <string name="register_new">ثبت خرید جدید</string>
    <string name="error204">اطلاعات مورد نظر دریافت نشد</string>
    <string name="register">ثبت</string>
    <string name="prize">جایزه</string>
    <string name="add_description">لطفا توضیحات را وارد نمایید</string>
    <string name="select_prize">انتخاب جوایز</string>
    <string name="percentage">درصدی</string>
    <string name="amount">مبلغی</string>
    <string name="outarea">شما خارج از محدوده ی مجاز برای ثبت خرید می باشید</string>
    <string name="purchasetitle">عنوان خریدها</string>
    <string name="purchaseedit">ویرایش خرید</string>
    <string name="register_product">ثبت کالا</string>
    <string name="productedit">ویرایش کالا</string>
    <string name="tryagain">تلاش مجدد</string>
    <string name="powered_by">Powered By</string>
    <string name="powered_by2">توسعه داده شده توسط شرکت راهبر بازار</string>
    <string name="familymember">همراه کننده/کنندگان در خرید</string>
    <string name="prize_selection">انتخاب جوایز فروشگاه</string>
    <string name="goods_selection">انتخاب جوایز کالا</string>
    <string name="no_register_shop">هنوز خریدی ثبت نکرده اید</string>
    <string name="update">ویرایش</string>
    <string name="update_done">بروز رسانی با موفقیت انجام شد</string>
    <string name="scanner">اسکن بارکد</string>
    <string name="search">جستجو</string>
    <string name="search_product">جستجوی کالا</string>
    <string name="barcode">بارکد</string>
    <string name="no_internet_connection">برای استفاده از برنامه از اتصال به اینترنت مطمئن شوید و دوباره امتحان کنید</string>
    <string name="detail">جزئیات</string>
    <string name="choose">انتخاب</string>
    <string name="main">دسته :</string>
    <string name="category">گروه :</string>
    <string name="subcategory">زیرگروه :</string>
    <string name="brand">برند :</string>
    <string name="subbrand">زیر برند :</string>
    <string name="owner">مالک :</string>
    <string name="company">شرکت :</string>
    <string name="country">کشور :</string>
    <string name="packaging">بسته بندی :</string>
    <string name="unit">واحد شمارش :</string>
    <string name="price">قیمت :</string>
    <string name="type">نوع :</string>
    <string name="amount_">مقدار :</string>
    <string name="description">شرح کالا :</string>
    <string name="explanation">جزئیات</string>
    <string name="consumer">مصرف کننده</string>
    <string name="discount_amount">مقدار تخفیف</string>
    <string name="price_">قیمت</string>
    <string name="amount2">مقدار</string>
    <string name="percent_amount">مبلغ/درصد</string>
    <string name="percent">درصد</string>
    <string name="amount2_">مبلغ</string>
    <string name="system_message">پیام سیستمی</string>
    <string name="register_product_successfully">کالا با موفقیت ثبت شد.در صورت وجود کالای دیگر محصول مربوطه را انتخاب کنید در غیر اینصورت پایان ثبت خرید را بزنید.</string>
    <string name="home">صفحه اصلی</string>
    <string name="deactive">غیرفعال</string>
    <string name="unallowable_registeration">ثبت محصول مجاز نمی باشد</string>
    <string name="close">بستن</string>
    <string name="social_medias">در شبکه های اجتماعی ما را دنبال کنید</string>
    <string name="exit_user_account">خروج از حساب</string>
    <string name="profile">پروفایل</string>
    <string name="family_info">مشخصات خانواده</string>
    <string name="received_messages">پیامهای دریافتی</string>
    <string name="support_center">مرکز پشتیبانی</string>
    <string name="faq">سوالات متداول</string>
    <string name="report_issue">گزارش مشکل</string>
    <string name="share_homadit">همادیت را به اشتراک بگذارید</string>
    <string name="system_error">خطای سیستمی</string>
    <string name="text_title">عنوان</string>
    <string name="explanation2">توضیحات</string>
    <string name="report_issue_title">لطفا مشکل خود را گزارش دهید</string>
    <string name="empetyReportIssue">فیلد های اطلاعاتی را تکمیل نمایید!</string>
    <string name="text_request_submitted">درخواست شما ثبت شد.</string>
    <string name="no_message">پیامی برای نماش وجود ندارد</string>
    <string name="shopping_items">اقلام خرید</string>
    <string name="purchase_date">تاریخ خرید:</string>
    <string name="tottal_amount2">مبلغ کل خرید:</string>
    <string name="paid_amount2">مبلغ پرداخت شده:</string>
    <string name="discount2">مبلغ تخفیف:</string>
    <string name="discount3">نوع تخفیف:</string>
    <string name="familymember2">همراهان خرید:</string>
    <string name="gifts">جوایز:</string>
    <string name="delete">حذف</string>
    <string name="edit">ویرایش</string>
    <string name="no_edit_product">کالایی برای ویرایش وجود ندارد</string>
    <string name="product_deleted">کالا با موفقیت حذف شد</string>
    <string name="today">امروز</string>
    <string name="calendar">تقویم</string>
    <string name="no_transaction">هیچ تراکنشی ثبت نشده است</string>
    <string name="transaction">تراکنش ها</string>
    <string name="Shop">بازارچه</string>
    <string name="personal_profile">اطلاعات اصلی نماینده خانواده</string>
    <string name="request_profile_change">درخواست تغییرات پروفایل</string>
    <string name="family_code">کد خانواده:</string>
    <string name="family_member_info">مشخصات افراد خانواده</string>
    <string name="fillup_profile_changes">لطفا تغییرات را وارد نمایید</string>
    <string name="send">ارسال</string>
    <string name="request_successfully">درخواست شما با موفقیت ثبت شد</string>
    <string name="purchase_date2">تاریخ خرید</string>
    <string name="text_invite_from"> شما از طرف </string>
    <string name="text_invite_friend"> با عضویت در پروژه بزرگ هُمادیت از جوایز نقدی و قرعه کشی های بزرگ ماهانه و سالانه بهره مند شوید. برای توضیحات بیشتر و تکمیل فرم عضویت به آدرس زیر مراجعه کنید.</string>
    <string name="goods_desc">شرح کالا</string>
    <string name="brand_">برند</string>
    <string name="size">سایز</string>
    <string name="unit_">واحد شمارش</string>
    <string name="update_app">بروز رسانی</string>
    <string name="force_update">بروز رسانی اجباری</string>
    <string name="optional_update">بروز رسانی اختیاری</string>
    <string name="related_goods_list">فهرست کالاهای مرتبط</string>
    <string name="register_new_barcodeList">ثبت مشخصات کالای جدید</string>
    <string name="no_goods_warning">کالای مورد نظر یافت نشد. لطفا مشخصات آنرا درج نمائید.</string>
    <string name="update_body_dialog">ورژن جدید برنامه با قابلیت های جدید و رفع مشکلات جزیی منتشر شده برای دانلود کلیک کنید</string>
    <string name="barcode_description">به کمک اسکن بارکد, بارکد محصول خود را بخوانید. توجه داشته باشید که اولویت با بارکدی است که با عدد 626 آغاز می گردد.</string>
    <string name="select">انتخاب کنید</string>
    <string name="shopping_product">اقلام خرید</string>
    <string name="no_purchased_product">برای این خرید محصولی ثبت نشده است</string>
    <string name="shop_date">فروشگاه/تاریخ</string>
    <string name="papasi">پاپاسی</string>
    <string name="left_days">روز مانده</string>
    <string name="amount_valume_size">تعداد</string>
    <string name="papasi_transaction">تراکنش پاپاسی</string>
    <string name="amount_transaction">تراکنش مبالغ</string>
    <string name="search_in_goods_list">جستجو در فهرست کالاها</string>
    <string name="finish_purchase">پایان خرید</string>
    <string name="search_in_goods_list2">جستجوی کالا</string>
    <string name="search_result_completed">کالاهای خریداری شده با موفقیت ثبت شده است.در صورت لزوم , از بخش خریدهای من آنها را ویرایش کنید.</string>
    <string name="register_goods">ثبت کالا</string>
    <string name="register_barcode">ثبت بارکد</string>
    <string name="finish_purchase_info">اعلام اتمام فرایند ثبت کالاهای خریداری شده. تا 24 ساعت بعد از ثبت خرید، می توانید مشخصات خرید و یا اقلام خرید را از بخش
        "خرید های جدید" در صفحه اصلی ویرایش، کم یا زیاد کنید.</string>
    <string name="finish_purchase_info2">خریدهای شما با موفقیت ثبت شده است. در صورت لزوم از بخش  خریدهای من آنرا ویرایش کنید.</string>
    <string name="register_barcode_info"> ارسال بارکد کالا به سیستم و دریافت کالاهای مرتبط با آن</string>
    <string name="direct_registeration_info">در این بخش می توانید مستقیما مشخصات کالا و نیز اطلاعات خرید آن را ثبت کنید.</string>
    <string name="search_goods_info">به کمک این سرویس،
        می توانید کالای خود را جستجو کرده و در صورت موجود بودن، اطلاعات خرید آن را ثبت کنید.</string>
    <string name="barcode_field_detail">اگر بارکد کالایی ناقص یا ناخوانا می باشد،
        حداقل 7 رقم از آن را بنویسید و "دکمه ثبت بارکد" را لمس کنید.</string>
    <string name="allowed_goods">مجموعه کالاهایی که می بایست در سیستم از روش های زیر ثبت گردد.</string>
    <string name="scan_barcode_detail">به کمک دوربین موبایل یا تبلت، بارکد محصول را بخوانید. برای نتیجه بهتر کالا را در جای ثابت و پر نور قرار دهید. در صورت عدم خوانده شدن بارکد،
        می توانید ارقام آن را در بخش بارکد بنویسید. نهایتا "دکمه ثبت بارکد" را لمس کنید.</string>
    <string name="direct_registerarion">ثبت مستقیم</string>
    <string name="edu">آموزش و اصطلاحات</string>
    <string name="take_photo">گرفتن عکس از فاکتور</string>
    <string name="taking_clear_photo">برای فاکتورهای بزرگ و طولانی لطفا طوری عکس بگیرید که حتما قسمت ابتدایی آن (تاریخ ,  نام فروشگاه و ...) در یکی از عکسها و قسمت انتهایی آن (جمع مبلغ فاکتور و...) در عکس دیگر کاملا واضح باشد.</string>
    <string name="factor_image">عکس فاکتور خرید</string>
    <string name="consumers">مصرف کنندگان</string>
    <string name="orderer">سفارش دهنده/ خریدار</string>
    <string name="no_product">بارکد فوق در بانک اطلاعات ما شناسایی نشد.لطفا اطلاعات محصول را مطابق موارد فوق ثبت نمایید.</string>
    <string name="goods_amount">تعداد کالا</string>
    <string name="goods_price">قیمت کالا</string>
    <string name="register_update">ثبت ویرایش</string>
    <string name="latest_purchases">خریدهای 24 ساعت گذشته</string>
</resources>