<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:background="@drawable/dialog_btn_shape"
    android:gravity="center"
    android:orientation="vertical">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@drawable/dialog_header_shape"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/attention"
            android:textColor="#FFF"
            android:textSize="16dp"
            android:textStyle="bold" />
    </RelativeLayout>


    <TextView
        android:id="@+id/text_body"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:gravity="center"
        android:text="@string/exit_profile_text_dialog"
        android:textColor="@color/blue"
        android:textSize="14dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/btn_exit_dialog"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:background="@drawable/bg_btn_prize_blue_light"
            android:gravity="center"
            android:text="@string/sure_text"
            android:textColor="@color/white"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/btn_cancel_dialog"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:background="@drawable/bg_btn_prize"
            android:gravity="center"
            android:text="@string/cancel_text"
            android:textColor="@color/white"
            android:textSize="12sp" />


    </LinearLayout>


</LinearLayout>