<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root_new_register_list"
    android:fitsSystemWindows="true"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.rahbarbazaar.homadit.android.ui.fragments.HistoryFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/rl_register"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="54dp">

            <TextView
                android:id="@+id/txt_header_new_register_list"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:padding="5dp"
                android:text="@string/latest_purchases"
                android:textColor="@color/blue_dark"
                android:textSize="20sp"
                android:textStyle="bold" />

        </RelativeLayout>


        <LinearLayout
            android:id="@+id/ll_info"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_below="@+id/text_no_active_survey"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/bg_activelist_header"
            android:orientation="horizontal">

            <View
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.3" />

            <TextView
                android:id="@+id/txt_header_time"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.7"
                android:gravity="center"
                android:text="@string/productedit"
                android:textColor="@color/white"
                android:textSize="12sp" />


            <TextView
                android:id="@+id/txt_header_score"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.7"
                android:gravity="center"
                android:text="@string/register_product"
                android:textColor="@color/white"
                android:textSize="12sp" />


            <TextView
                android:id="@+id/txt_header_title"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.7"
                android:gravity="center"
                android:text="@string/purchaseedit"
                android:textColor="@color/white"
                android:textSize="12sp" />


            <TextView
                android:id="@+id/txt_header_status"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="10dp"
                android:layout_weight="2"
                android:gravity="start"
                android:text="@string/shop_date"
                android:textColor="@color/white"
                android:textSize="12sp" />


        </LinearLayout>


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:layout_marginTop="1dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclere_register_fragment"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fadeScrollbars="false"
                android:scrollbarSize="3dp"
                android:scrollbarThumbVertical="@color/pink"
                android:scrollbars="vertical" />

            <TextView
                android:id="@+id/txt_no_shop"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_no_purchase"
                android:gravity="center"
                android:padding="17dp"
                android:text="@string/no_register_shop"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:visibility="gone" />

        </RelativeLayout>


    </LinearLayout>


    <com.wang.avi.AVLoadingIndicatorView
        android:id="@+id/avi_loading_fr_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone"
        app:indicatorColor="@color/blue_dark" />

    <RelativeLayout
        android:id="@+id/rl_register"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_above="@+id/rl_bottom_newRegisterList"
        android:layout_marginStart="60dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="60dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/bg_button_add">


        <RelativeLayout
            android:id="@+id/rl_btn_register"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentBottom="true"
            android:orientation="vertical"
            android:visibility="visible">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="match_parent"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="10dp"
                android:padding="15dp"
                android:src="@drawable/plus_icon" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/register_new"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:textStyle="bold" />

        </RelativeLayout>


        <com.wang.avi.AVLoadingIndicatorView
            android:id="@+id/avi"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_centerHorizontal="true"
            android:visibility="gone"
            app:indicatorColor="@color/white" />

    </RelativeLayout>


    <RelativeLayout
        android:id="@+id/rl_bottom_newRegisterList"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_alignParentBottom="true"
        android:background="@drawable/bg_toolbar">

        <LinearLayout
            android:id="@+id/ll_return_newRegisterList"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="30dp"
                android:layout_height="match_parent"
                android:padding="3dp"
                android:src="@drawable/arrow_left"
                app:tint="#FFF" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginTop="2dp"
                android:gravity="center"
                android:text="@string/retuen"
                android:textColor="@color/white_gray"
                android:textSize="15sp"
                android:textStyle="bold" />

        </LinearLayout>
    </RelativeLayout>

</RelativeLayout>
