<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_purchase_item"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.fragments.RegisterFragment">

    <RelativeLayout
        android:id="@+id/rl_addmember"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="80dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/bg_button_add">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="10dp"
            android:padding="10dp"
            android:src="@drawable/img_member" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/consumer"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textStyle="bold" />
    </RelativeLayout>


    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycler_edited_members"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layoutDirection="rtl" />

    <RelativeLayout
        android:id="@+id/rl_prize"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="80dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/bg_btn_prize">

        <ImageView
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="10dp"
            android:padding="10dp"
            android:src="@drawable/img_prize" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/prize_selection"
            android:textColor="@color/white"
            android:textSize="14sp"
            android:textStyle="bold" />
    </RelativeLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recycler_prize"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layoutDirection="rtl" />


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="5dp"
        android:background="@drawable/bg_prize_item">

        <EditText
            android:id="@+id/edt_amount"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_centerInParent="true"
            android:cursorVisible="true"
            android:hint="@string/amount2"
            android:gravity="center"
            android:inputType="number"
            android:backgroundTint="@color/blue"
            android:padding="5sp"
            android:textColor="@color/blue_dark"
            android:textColorHint="@color/blue"
            android:textDirection="rtl"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/txt_unit"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_toStartOf="@+id/edt_amount"
            android:padding="5sp"
            android:text="جعبه"
            android:layout_marginEnd="10dp"
            android:gravity="center"
            android:textColor="@color/blue_dark"
            android:textColorHint="@color/blue"
            android:textDirection="rtl"
            android:textSize="14sp" />

    </RelativeLayout>


    <EditText
        android:id="@+id/edt_price"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginStart="5dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="5dp"
        android:background="@drawable/bg_prize_item"
        android:cursorVisible="true"
        android:gravity="center"
        android:hint="@string/tottal_amount"
        android:inputType="number"
        android:padding="5sp"
        android:textColor="@color/blue_dark"
        android:textColorHint="@color/blue"
        android:textDirection="rtl"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/edt_paid"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_gravity="center"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:background="@drawable/bg_prize_item"
        android:gravity="center"
        android:hint="@string/paid_amount"
        android:inputType="number"
        android:padding="5sp"
        android:textColor="@color/blue_dark"
        android:textColorHint="@color/blue"
        android:textDirection="rtl"
        android:textSize="14sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="5sp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:background="@drawable/bg_prize_item"
        android:orientation="horizontal"
        android:weightSum="4">

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2">

            <EditText
                android:id="@+id/edt_discount"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="20dp"
                android:backgroundTint="@color/blue"
                android:gravity="center"
                android:inputType="number"
                android:hint="@string/percent_amount"
                android:padding="10dp"
                android:textColor="@color/blue_dark"
                android:textColorHint="@color/blue"
                android:textSize="15sp" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="2dp"
                android:layout_toStartOf="@+id/checkBox_amount"
                android:gravity="center_vertical"
                android:text="@string/amount"
                android:textColor="@color/blue_dark" />

            <CheckBox
                android:id="@+id/checkBox_amount"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentEnd="true"
                app:buttonTint="@color/blue_dark" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginEnd="5dp"
            android:layout_weight="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="2dp"
                android:layout_toStartOf="@+id/checkBox_precentage"
                android:gravity="center_vertical"
                android:text="@string/percentage"
                android:textColor="@color/blue_dark" />

            <CheckBox
                android:id="@+id/checkBox_precentage"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentEnd="true"
                app:buttonTint="@color/blue_dark" />

        </RelativeLayout>
    </LinearLayout>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_alignParentBottom="true"
            android:background="@drawable/bg_toolbar">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:gravity="center">

                <Button
                    android:id="@+id/btn_cancel_purchased_items"
                    android:layout_width="100dp"
                    android:layout_height="50dp"
                    android:layout_marginEnd="10dp"
                    android:background="@drawable/bg_btn_prize"
                    android:text="@string/cancel_text"
                    android:textColor="@color/white"
                    android:visibility="visible" />


                <RelativeLayout
                    android:layout_width="100dp"
                    android:layout_height="50dp"
                    android:layout_marginStart="10dp"
                    android:layout_toEndOf="@+id/btn_cancel_purchased_items"
                    android:background="@drawable/bg_btn_prize">

                    <com.wang.avi.AVLoadingIndicatorView
                        android:id="@+id/avi_register_purchased_items"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_centerInParent="true"
                        android:visibility="gone"
                        app:indicatorColor="@color/white" />

                    <Button
                        android:id="@+id/btn_register_purchased_items"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_centerHorizontal="true"
                        android:background="@drawable/bg_btn_prize"
                        android:text="@string/register"
                        android:textColor="@color/white" />


                </RelativeLayout>

            </RelativeLayout>

        </RelativeLayout>

    </RelativeLayout>
</LinearLayout>